caddi/cmd/charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: cmd
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/instance: cmd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cmd
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: cmd-0.1.0
  name: cmd
  namespace: default
spec:  
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: cmd
    app.kubernetes.io/name: cmd
  type: ClusterIP
